# geoDisassembler

./: README.md
Assembling/: CMakeLists.txt  Mesh.cpp  README.md  list  meshlist  pclist
Disassembling/: CMakeLists.txt  README.md  Simp.cpp  job.sh  job2.sh  load.py  undo.sh
Segmentation/: CMakeCache.txt  CMakeLists.txt  README.md  Seg.cpp  delete.sh
data/: README.md
data/mesh/: README.md
data/mesh_simp/: README.md
data/pc/: README.md
data/pc_simp/: README.md
